[Luka] Added Video field and new page

--- a/movies/views/movies_view.xml
+++ b/movies/views/movies_view.xml
@@ -34,6 +34,11 @@
                                     <field name="movie_income"/>
                                 </group>
                             </page>
+                            <page string="Watch Movie">
+                                <group>
+                                    <field name="video" widget="url"/>
+                                </group>
+                            </page>
                         </notebook>
                     </group>
                 </sheet>
